--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
 						<option value="opt4">Пункт 4</option>
 					</select></div>
 			</div>
-					<img src="img/Линия подитога.png" alt="Черта подитога"><br>
+					<img src="img/линия подитога.png" alt="Черта подитога"><br>
 				<div class="total"><p>Сроки<br>Стоимость</p></div>
 			<div class="statistics"><h2>НЕМНОГО СТАТИСТИКИ</h2>
 				<img src="img/Черта заголовка.png" alt="Черта заголовка была тут"><br><br>
